--- a/src/tinympc/CMakeLists.txt
+++ b/src/tinympc/CMakeLists.txt
@@ -1,6 +1,16 @@
-add_library(tinympc STATIC
+# Create a list of source files
+set(TINY_MPC_SOURCES
     admm.cpp
-    codegen.cpp
 )
 
-target_include_directories(tinympc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..) # Include src/ directory instead of tinympc/
+# Conditionally include codegen.cpp if the BUILD_CODEGEN option is ON
+if(BUILD_CODEGEN)
+    list(APPEND TINY_MPC_SOURCES codegen.cpp)
+endif()
+
+# Add library
+add_library(tinympc STATIC ${TINY_MPC_SOURCES})
+
+# Include directories
+target_include_directories(tinympc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..) # Include src/ directory
+
