Fix CMakeLists.txt tinympc destination

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ install(TARGETS tinympc
 
 # Install the header files
 file(GLOB HEADERS "src/tinympc/*.hpp")
-install(FILES ${HEADERS} DESTINATION include/Eigen/tinympc)
+install(FILES ${HEADERS} DESTINATION include/tinympc)
 file(GLOB EIGEN_HEADER "include/Eigen.h")
 install(FILES ${EIGEN_HEADER} DESTINATION include/)
 
